# mantra

./: .env.example  .gitignore  .mailmap  README.md  chat_api.py  mantra_app.py  pyproject.toml  requirements.txt  start_chat_widget.sh
notes/: CHAT_WIDGET_GUIDE.md  COMPONENT_1_SUMMARY.md  FAISS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTERFACE_COMPARISON.md  QUICK_START_CHAT_WIDGET.md  QUICK_TEST_GUIDE.md  RECOVERY_PLAN.md  RUN_CHAT.md  SETUP_COMPLETE.md  TECH_STACK_FINAL.md
scripts/: build_index.py  extract_cases.py  legacy_app.py  quick_start.sh  start_mantra.sh
src/mantra/: __init__.py  cap_extractor.py  config.py  data_extractor.py  exceptions.py  indexer.py  justia_extractor.py  query_classifier.py  response_generator.py  utils.py
static/: chat-widget.js  index.html
tests/: test_extractor.py  test_indexer.py
